fix filter animation on safari

--- a/packages/@coorpacademy-components/src/molecule/filters/style.css
+++ b/packages/@coorpacademy-components/src/molecule/filters/style.css
@@ -43,8 +43,6 @@
 }
 
 .wrapperFilters {
-  display: flex;
-  flex-wrap: wrap;
   width: 100%;
   height: auto;
   box-sizing: border-box;
@@ -139,7 +137,7 @@
 }
 
 .choice {
-  width: 22.5%;
+  width: 23%;
   padding: 5px 1%;
   position: relative;
 }
